--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "crons": [
+    {
+      "path": "/api/reminders/process",
+      "schedule": "*/15 * * * *"
+    }
+  ]
 }
